@@ -30,7 +30,10 @@ import java.awt.datatransfer.Transferable;
 import java.awt.datatransfer.UnsupportedFlavorException;
 import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 //}}}
 
 /**
@@ -47,25 +50,22 @@ public class ListVFSFileTransferable implements Transferable
 	//{{{ ListVFSFileTransferable constructor
 	public ListVFSFileTransferable(VFSFile[] files)
 	{
-		this.files = List.of(files);
+		this.files = Collections.unmodifiableList(Arrays.asList(files));
 	} //}}}
 
 	//{{{ getTransferDataFlavors() method
-	@Override
 	public DataFlavor[] getTransferDataFlavors()
 	{
 		return supported;
 	} //}}}
 
 	//{{{ isDataFlavorSupported() method
-	@Override
 	public boolean isDataFlavorSupported(DataFlavor flavor)
 	{
 		return jEditFileList.equals(flavor) || DataFlavor.stringFlavor.equals(flavor);
 	} //}}}
 
 	//{{{ getTransferData() method
-	@Override
 	public Object getTransferData(DataFlavor flavor) throws UnsupportedFlavorException, IOException
 	{
 		if (jEditFileList.equals(flavor))
@@ -86,7 +86,7 @@ public class ListVFSFileTransferable implements Transferable
 		}
 		else if (DataFlavor.javaFileListFlavor.equals(flavor))
 		{
-			Collection<File> files = new ArrayList<>(this.files.size());
+			List<File> files = new ArrayList<File>(this.files.size());
 			for (VFSFile file : this.files)
 			{
 				if (file.getVFS() instanceof FileVFS)
